2001-01-29  Rebecca Schulman  <rebecka@eazel.com>

	reviewed by: Darin Adler <darin@eazel.com>

	* libnautilus-extensions/nautilus-program-choosing.c:
	Launch an application with a uri as a parameter for
	applications that accept uris for all locations, and 
	non-file parameters where applications expect 
	uris for non-file locations.  This fixes bug 4962,
	"Open with mpg123 fails for local files"
	* libnautilus-extensins/nautilus-file-utilities.h:
	* libnautilus-extensins/nautilus-file-utilities.c
	(nautilus_uri_get_scheme), (nautilus_uri_is_local_scheme):
	Add new uri_get_scheme function and fix a lack of 
	colons in the nautilus_uri_is_local_scheme function
	that was causing us to do a istr_has_prefix (uri, "file")
	to check if a uri was of scheme file.
	* libnautilus-extensions/nautilus-file.c: 
	(nautilus_file_get_uri_scheme) refactor the code in here
	to use the nautilus_uri_get_scheme function 

2001-01-29  Ramiro Estrugo  <ramiro@eazel.com>

	reviewed by: Arik Devens  <arik@eazel.com>

	* libnautilus-extensions/nautilus-preferences-box.c:
	(nautilus_preferences_box_initialize),
	(preferences_box_select_pane),
	(preferences_box_category_list_recreate),
	(category_list_select_row_callback),
	(nautilus_preferences_box_update):
	Fix bug 6119 - Preferences pane is blank after changing user
	levels from advanced to beginner.  Whenever we recreate the
	category list, we update the selection.
		
2001-01-29  Gene Z. Ragan  <gzr@eazel.com>

	reviewed by: Pavel Cisler <pavel@eazel.com>
	
	Fixed bug 6098, mounting and unmounting a cdrom
	volume incorrectly reports error.
	
	* libnautilus-extensions/nautilus-volume-monitor.c:
	(close_error_pipe):
	Loop on read until we get an error or end of read.
	
	* src/file-manager/fm-desktop-icon-view.c:
	(create_unique_volume_name):
	Tweak the index so the created name accurately reflects
	the number of occurence the file is.
	
	Initial work on adding a GMC to Nautilus transition mechanism
	to the first time wizard.