@@ -1,3 +1,10 @@
+2001-01-29  Robey Pointer  <robey@eazel.com>
+
+	* icons/Makefile.am:
+
+	Un-revert some changes Andy accidentally reverted last week that
+	cause the password-change view to display incorrectly.
+
 2001-01-29  Rebecca Schulman  <rebecka@eazel.com>
 
 	reviewed by: Darin Adler <darin@eazel.com>
